<resources>
    <string name="app_name">ToolLibs</string>

    <!-- 对话框 -->
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <!-- 主界面 -->
    <string name="main_text">Text</string>
    <string name="main_button">Button</string>
    <string name="main_view">View</string>
    <string name="main_selector">Selector</string>
    <string name="main_data_show">Data Show</string>
    <string name="main_bar">Bar</string>

    <string name="main_dialog">Dialog</string>
    <string name="main_intent">Intent</string>
    <string name="main_animator">Animator</string>
    <string name="main_service">Service</string>
    <string name="main_database">Database</string>
    <string name="main_demo">Demo</string>
    <string name="main_setting">Setting</string>

    <!-- 设置页 -->
    <string name="setting_auto_launch">Auto Launch</string>
    <string name="setting_reboot">Reboot</string>
    <string name="setting_language">Display Language</string>
    <string name="setting_version">Version Code</string>


    <!--he feng string-->
    <string name="weather_string_sunny">晴</string>
    <string name="weather_string_cloudy">多云</string>
    <string name="weather_string_few_clouds">少云</string>
    <string name="weather_string_partly_cloudy">晴间多云</string>
    <string name="weather_string_overcast">阴</string>
    <string name="weather_string_windy">有风</string>
    <string name="weather_string_calm">平静</string>
    <string name="weather_string_light_breeze">微风</string>
    <string name="weather_string_moderate_breeze">和风</string>
    <string name="weather_string_fresh_breeze">清风</string>
    <string name="weather_string_strong_breeze">强风</string>
    <string name="weather_string_high_wind">疾风</string>
    <string name="weather_string_gale">大风</string>
    <string name="weather_string_strong_gale">烈风</string>
    <string name="weather_string_storm">风暴</string>
    <string name="weather_string_violent_storm">狂爆风</string>
    <string name="weather_string_hurricane">飓风</string>
    <string name="weather_string_tornado">龙卷风</string>

    <!-- YU -->
    <string name="weather_string_tropical_storm">热带风暴</string>
    <string name="weather_string_shower_rain">阵雨</string>
    <string name="weather_string_heavy_shower_rain">强阵雨</string>
    <string name="weather_string_thundershower">雷阵雨</string>
    <string name="weather_string_heavy_thunderstorm">强雷阵雨</string>
    <string name="weather_string_thundershower_with_hail">雷阵雨伴有冰雹</string>
    <string name="weather_string_light_rain">小雨</string>
    <string name="weather_string_moderate_rain">中雨</string>
    <string name="weather_string_heavy_rain">大雨</string>
    <string name="weather_string_extreme_rain">极端降雨</string>
    <string name="weather_string_drizzle_rain">细雨</string>
    <string name="weather_string_storm_rain">暴雨</string>
    <string name="weather_string_heavy_storm">大暴雨</string>
    <string name="weather_string_severe_storm">特大暴雨</string>
    <string name="weather_string_freezing_rain">冻雨</string>
    <string name="weather_string_light_to_moderate_rain">小到中雨</string>
    <string name="weather_string_moderate_to_heavy_rain">中到大雨</string>
    <string name="weather_string_heavy_rain_to_storm">大到暴雨</string>
    <string name="weather_string_storm_to_heavy_storm">暴雨到大暴雨</string>
    <string name="weather_string_heavy_to_severe_storm">大暴雨到特大暴雨</string>
    <string name="weather_string_rain">雨</string>

    <!-- SNOW -->
    <string name="weather_string_light_snow">小雪</string>
    <string name="weather_string_moderate_snow">中雪</string>
    <string name="weather_string_heavy_snow">大雪</string>
    <string name="weather_string_snowstorm">暴雪</string>
    <string name="weather_string_sleet">雨夹雪</string>
    <string name="weather_string_rain_and_snow">雨雪天气</string>
    <string name="weather_string_shower_snow">阵雨夹雪</string>
    <string name="weather_string_snow_flurry">阵雪</string>
    <string name="weather_string_light_to_moderate_snow">小到中雪</string>
    <string name="weather_string_moderate_to_heavy_snow">中到大雪</string>
    <string name="weather_string_heavy_snow_to_snowstorm">大到暴雪</string>
    <string name="weather_string_snow">雪</string>

    <!--MIST-->
    <string name="weather_string_mist">薄雾</string>
    <string name="weather_string_foggy">雾</string>
    <string name="weather_string_haze">霾</string>
    <string name="weather_string_sand">扬沙</string>
    <string name="weather_string_dust">浮尘</string>
    <string name="weather_string_duststorm">沙尘暴</string>
    <string name="weather_string_sandstorm">强沙尘暴</string>
    <string name="weather_string_dense_fog">浓雾</string>
    <string name="weather_string_strong_fog">强浓雾</string>
    <string name="weather_string_moderate_haze">中度霾</string>
    <string name="weather_string_heavy_haze">重度霾</string>
    <string name="weather_string_severe_haze">严重霾</string>
    <string name="weather_string_heavy_fog">大雾</string>
    <string name="weather_string_extra_heavy_fog">特强浓雾</string>
    <string name="weather_string_hot">热</string>
    <string name="weather_string_cold">冷</string>
    <string name="weather_string_unknown">未知</string>

    <string name="weather_unknown">正在获取天气数据</string>
    <string name="weather_temp">%1$d℃</string>


    <string-array name="Date">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>
