<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img_bg_app2"
    tools:context=".Activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_20"/>

            <Button
                android:id="@+id/bText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_text"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/padding_5"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_15"
                android:background="@drawable/selector_button"/>

            <Button
                android:id="@+id/bButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/padding_5"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_15"
                android:background="@drawable/selector_button"/>

            <Button
                android:id="@+id/bView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_view"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/padding_5"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_15"
                android:background="@drawable/selector_button"/>

            <Button
                android:id="@+id/bSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_selector"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/padding_5"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_15"
                android:background="@drawable/selector_button"/>

            <Button
                android:id="@+id/bShow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_data_show"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/padding_5"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_15"
                android:background="@drawable/selector_button"/>

            <Button
                android:id="@+id/bBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_bar"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/padding_5"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_15"
                android:background="@drawable/selector_button"/>

            <Button
                android:id="@+id/bDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_dialog"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/padding_5"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_15"
                android:background="@drawable/selector_button"/>

            <Button
                android:id="@+id/bIntent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_intent"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/padding_5"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_15"
                android:background="@drawable/selector_button"/>

            <Button
                android:id="@+id/bAnimators"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_animator"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/padding_5"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_15"
                android:background="@drawable/selector_button"/>

            <Button
                android:id="@+id/bService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_service"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/padding_5"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_15"
                android:background="@drawable/selector_button"/>

            <Button
                android:id="@+id/bDatabase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_database"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/padding_5"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_15"
                android:background="@drawable/selector_button"/>

            <Button
                android:id="@+id/bDemo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_demo"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/padding_5"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_15"
                android:background="@drawable/selector_button"/>

            <Button
                android:id="@+id/bSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_setting"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/padding_5"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_15"
                android:background="@drawable/selector_button"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>